--- a/home.html
+++ b/home.html
@@ -493,7 +493,7 @@
 			<div class="footerDiv1">
 				<ul class="social-icons mt-2 mt-sm-0">
 					<li><a class="fs-14" href="javascript:;">@ 2019 Instawash, All Rights Reserved. </a></li>
-					<li><a class="fs-14"  href="javascript:;">Terms & Conditions</a></li>										
+					<li><a class="fs-14"  href="terms.html">Terms & Conditions</a></li>										
 					<li><a class="fs-14"  href="javascript:;">Privacy Policy</a></li>										
 				</ul>
 			</div>
