privavy page and fixes

--- a/home.html
+++ b/home.html
@@ -217,7 +217,7 @@
 															<a class="btn-floating btn-action ml-auto mr-4 pink lighten-3"><i class="fa fa-right pl-1"></i></a>
 															<div class="card-body">
 															  <p class="color-dark-blue ff-b align-left mb-minus-10">PREMIUM</p>
-															  <h4 class="card-title color-black ff-b mb-minus-10">5 Blankets</h4>
+															  <h4 class="card-title color-black ff-b fs-30 mb-minus-10">5 Blankets</h4>
 															  <p class="color-dark-blue ff-b  align-left ">Rs. 1500</p>
 															</div>
 														  </div>
@@ -277,7 +277,7 @@
 																	<a class="btn-floating btn-action ml-auto mr-4 pink lighten-3"><i class="fa fa-right pl-1"></i></a>
 																	<div class="card-body">
 																	  <p class="color-dark-blue ff-b align-left mb-minus-10">PREMIUM</p>
-																	  <h4 class="card-title color-black ff-b mb-minus-10">5 Blankets</h4>
+																	  <h4 class="card-title color-black fs-30 ff-b mb-minus-10">5 Blankets</h4>
 																	  <p class="color-dark-blue ff-b  align-left ">Rs. 1500</p>
 																	</div>
 																  </div>
@@ -337,7 +337,7 @@
 																	<a class="btn-floating btn-action ml-auto mr-4 pink lighten-3"><i class="fa fa-right pl-1"></i></a>
 																	<div class="card-body">
 																	  <p class="color-dark-blue ff-b align-left mb-minus-10">PREMIUM</p>
-																	  <h4 class="card-title color-black ff-b mb-minus-10">5 Blankets</h4>
+																	  <h4 class="card-title color-black ff-b fs-30 mb-minus-10">5 Blankets</h4>
 																	  <p class="color-dark-blue ff-b  align-left ">Rs. 1500</p>
 																	</div>
 																  </div>
@@ -494,7 +494,7 @@
 				<ul class="social-icons mt-2 mt-sm-0">
 					<li><a class="fs-14" href="javascript:;">@ 2019 Instawash, All Rights Reserved. </a></li>
 					<li><a class="fs-14"  href="terms.html">Terms & Conditions</a></li>										
-					<li><a class="fs-14"  href="javascript:;">Privacy Policy</a></li>										
+					<li><a class="fs-14"  href="privacy.html">Privacy Policy</a></li>										
 				</ul>
 			</div>
 			<div class="footerDiv2">
