--- a/terms.html
+++ b/terms.html
@@ -104,7 +104,7 @@
 				<ul class="social-icons mt-2 mt-sm-0">
 					<li><a class="fs-14" href="javascript:;">@ 2019 Instawash, All Rights Reserved. </a></li>
 					<li><a class="fs-14"  href="terms.html">Terms & Conditions</a></li>										
-					<li><a class="fs-14"  href="javascript:;">Privacy Policy</a></li>										
+					<li><a class="fs-14"  href="privacy.html">Privacy Policy</a></li>										
 				</ul>
 			</div>
 			<div class="footerDiv2">
