--- a/home.html
+++ b/home.html
@@ -445,14 +445,14 @@
 				  </div>
 				  <div class="row mt-60">
 					<div class="col-lg-1"></div>
-					<div class="col-lg-5">
+					<div class="col-lg-5 nexus-center-card">
 					  <div class="content">
 						<div class="quote">"</div>
 						<p class="color-black fs-16">This is the best service of its class so far. Thumbs up guys! </p><br><b class="color-black ff-b">Usman </b><br>
 						<p class="color-black">Lahore </p>
 					  </div>
 					</div>
-					<div class="col-lg-5">
+					<div class="col-lg-5 nexus-center-card">
 					  <div class="content">
 						<div class="quote">"</div>
 						<p class="color-black fs-16">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec blandit at elit ut.
