--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 <link id="favicon" rel="icon" href="images/insta-logo.png" type="image/ico" sizes="16x16" />
-<title>Instawash | Home</title>
+<title>Instawash | Pricing</title>
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/default.css" type="text/css"/>
