--- a/privacy.html
+++ b/privacy.html
@@ -23,8 +23,8 @@
 				<div class="mobileMenuBtn showOnMobile"><em class="svg-ico" data-svg="mobMenuIcoOpen"></em><em style="display: none" class="svg-ico" data-svg="mobMenuIcoClose"></em></div>
 				<nav>
 					<ul>
-						<li class="showOnMobile"><a href="javascript:;" class="linkk">About</a></li>
-						<li class="showOnMobile"><a href="javascript:;" class="linkk">Pricing</a></li>
+						<li class="showOnMobile"><a href="about.html" class="linkk">About</a></li>
+						<li class="showOnMobile"><a href="pricing.html" class="linkk">Pricing</a></li>
 						<li class="showOnMobile mb-20"><a href="javascript:;" class="btn1 bg-blue1">Login</a></li>
 						<li class="showOnMobile mb-20"><a href="javascript:;" class="btn1 bg-blue1">Get The App</a></li>
 						<li class="showOnMobile mb-20"><a href="javascript:;" class="btn1 bg-blue1">Order Now</a></li>
@@ -32,8 +32,8 @@
 				</nav>
 			</div> 
 			<div class="headerRightDiv">
-				<a href="javascript:;" class="linkk">About</a>
-				<a href="javascript:;" class="linkk">Pricing</a>
+				<a href="about.html" class="linkk">About</a>
+				<a href="pricing.html" class="linkk">Pricing</a>
 				<a href="javascript:;" class="btn1 bg-transparent ml-20">Login</a>
 				<a href="javascript:;" class="btn1 bg-transparent ml-20">Get The App</a>
 				<a href="javascript:;" class="btn1 bg-white ml-20" style="color: #0c339b;">Order Now</a>
